docs/book/samples/appa/paren_call_check.out
error[formatting]: canonical form requires exactly one space here
  --> paren_call_check.kso:1:13
   1 | main = print("hi")
                   ^
